上传1.0.0版本至maven库。

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/hong/Library/Android/sdk
+
+repositoryUserName=chenxiaohong
+repositoryPassword=chenxiaohong
