--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation project(path: ':strangerchat')
     implementation 'com.github.pinguo-zhouwei:EasyBlur:v1.0.0'
+    api 'com.linkv.live:strangerchat:1.0.0'
 }
