--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,11 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+#maven group
+GROUP_NAME=com.linkv.live
+
+#sdk version
+LIVEME_SDK_VERSION_NAME=1.0.0
+LIVEME_SDK_VERSION_CODE=1
+
+releaseRepositoryUrl =http://maven.linkv.fun/repository/liveme-android/
