--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.linkv.strangechat">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.linkv.strangechatdemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -30,7 +31,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".IncomingCallActivity" />
-        <activity android:name=".LiveRoomActivity" />
+        <activity android:name=".LiveRoomActivity" android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
     </application>
 
 </manifest>
