修改部分代码以对外提供。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            res.srcDirs += '/src/main/res/gift'
+        }
+    }
 
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
