修改依赖SDK aar方式为依赖maven库，增加keep混淆的文件。

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'http://maven.linkv.fun/repository/liveme-android/'
+            credentials {
+                username = 'LivemesdkPublicUser'
+                password = 'public'
+            }
+        }
         maven {url "https://jitpack.io"}
     }
 }
