上传1.0.1至maven库，增加了rtc的keep混淆。demo改为依赖maven库。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,18 +38,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    sourceSets {
-        main {
-            res.srcDirs += '/src/main/res/gift'
-        }
-    }
 
-}
-
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 dependencies {
@@ -61,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.pinguo-zhouwei:EasyBlur:v1.0.0'
-//    implementation project(path: ':strangerchat')
+    implementation project(path: ':strangerchat')
 //    api 'com.linkv.live:strangerchat:1.0.0'
 
 }
