--- a/strangerchat/build.gradle
+++ b/strangerchat/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName LIVEME_SDK_VERSION_NAME
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
@@ -21,19 +21,11 @@ android {
         }
     }
 
-    sourceSets {
-        main {
-            res.srcDirs = ['src/main/res']
-            jniLibs.srcDirs = ['libs']
-            jni.srcDirs = [] // This prevents the auto generation of Android.mk
-        }
-    }
-
 }
 
-
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.aar', '*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.linkv.live:rtmsdk:0.0.6'
 
 }
 
