增加房间收发消息功能。

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
-/captures
+/captureszen
 .externalNativeBuild
 .cxx
 /app/src/main/java/com/linkv/strangechatdemo/LocalConfig.java
+/.idea/jarRepositories.xml
