--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation 'com.github.pinguo-zhouwei:EasyBlur:v1.0.0'
     implementation project(path: ':strangerchat')
     //    api 'com.linkv.live:strangerchat:1.0.1'
