--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.injected.testOnly=false
 
 #maven group
 GROUP_NAME=com.linkv.live
